# hvd190d_pi_basic

./: CMakeLists.txt  _driv  _driv.cpp  build.sh  driv  driv.cpp  driv_  driv_190228  driv_190228.cpp  driv_190306.cpp  original_driv  original_driv.cpp  wf.csv  wf_t.csv
doc/: README.md
history/: a.out  demo_190312.cpp  demo_190716.cpp  hvd190d_pi_driv_wiringpi.cpp  hvd190d_pi_driv_wiringpi.h  main.cpp
src/: driv.cpp
src/apps/: .main.cpp.swp  main  main.cpp
src/libs/: driv.cpp  driv.h  hvd190d_pi_driv.cpp  hvd190d_pi_driv.h  hvd190d_pi_wf.cpp  hvd190d_pi_wf.h  koc_wf_gen.cpp  koc_wf_gen.h  rpi_reg_access.cpp  rpi_reg_access.h  rpi_tcp_server  rpi_tcp_server.cpp  rpi_tcp_server.h
